--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.de.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.de.yml
@@ -4,17 +4,16 @@ Next: Weiter
 Hostname: Hostnamen
 'Please enter a hostname': 'Bitte Hostnamen eingeben'
 Back: Zurueck
-Danish: Daenisch
-Turkish: Tuerkisch
-Swedish: Schwedisch
-English: Englisch
-Dutch: Niederlaendisch
-French: Franzoesisch
-Portuguese: Portugiesisch
+English: English
+Danish: Dansk
+Dutch: Nederlands
+French: Français
+Portuguese: Portugues
 German: Deutsch
-Italian: Italienisch
-'Simplified Chinese': 'Vereinfachtes Chinesisch'
-'Traditional Chinese': 'Tradizionelles Chinesisch'
+Turkish: Türkçe
+Italian: Italiano
+'Simplified Chinese': 簡體中文
+'Traditional Chinese': 繁體中文
 'Domain Name': 'Domainname'
 'Please enter a domain name': 'Bitte Domainnamen eingeben'
 Email: Email
