Fix syntax messages.de.yml
Former-commit-id: da530e6b5878c69df7a1c37273c6802c979e2daa

--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.de.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.de.yml
@@ -80,4 +80,4 @@ Timezone: Zeitzone
 'Web Admin Password:': 'Web Admin Passwort:'
 'Console Admin Username:': 'Konsolenbenutzer:'
 'Console Admin Password:': 'Konsolenpasswort:'
-'Server Mail Locale:' 'Server Mail Locale:'
+'Server Mail Locale:': 'Server Mail Locale:'
