--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.da.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.da.yml
@@ -1,19 +1,25 @@
+# Note: Language selections are in each respective language, not this language
+English: English
+Danish: Dansk
+Dutch: Nederlands
+French: Français
+Portuguese: Portugues
+German: Deutsche
+Turkish: Türk
+Italian: Italiano
+Greek: Ελληνικά
+Russian: Pусский
+Swedish: Svensk
+'Simplified Chinese': 簡體中文
+'Traditional Chinese': 繁體中文
+# End of language selections
+
 'Welcome to': 'Velkommen til'
 Language: Sprog
 Next: Næste
 Hostname: Værtsnavn
 'Please enter a hostname': 'Indtast værtsnavn'
 Back: Tilbage
-English: Engales
-Danish: Dansk
-Dutch: Nederlands
-French: Français
-Portuguese: Portugues
-German: Deutsche
-Turkish: Turkish
-Italian: Italiano
-'Simplified Chinese': 簡體中文
-'Traditional Chinese': 繁體中文
 'Domain Name': 'Domæne navn'
 'Please enter a domain name': 'Indtast domæne navn'
 Email: Email
