--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.de.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.de.yml
@@ -1,19 +1,25 @@
+# Note: Language selections are in each respective language, not this language
+English: English
+Danish: Dansk
+Dutch: Nederlands
+French: Français
+Portuguese: Portugues
+German: Deutsche
+Turkish: Türk
+Italian: Italiano
+Greek: Ελληνικά
+Russian: Pусский
+Swedish: Svensk
+'Simplified Chinese': 簡體中文
+'Traditional Chinese': 繁體中文
+# End of language selections
+
 'Welcome to': 'Willkommen bei'
 Language: Sprache
 Next: Weiter
 Hostname: Hostname
 'Please enter a hostname': 'Bitte Hostnamen eingeben'
 Back: Zurück
-English: Englisch
-Danish: Dänisch
-Dutch: Niederländisch
-French: Französisch
-Portuguese: Portugisisch
-German: Deutsch
-Turkish: Türkisch
-Italian: Italienisch
-'Simplified Chinese': vereinfachtes Chinesisch
-'Traditional Chinese': traditionelles Chinesisch
 'Domain Name': 'Domäne'
 'Please enter a domain name': 'Bitte Domäne eingeben'
 Email: Email
@@ -53,14 +59,14 @@ Email: Email
 'Configure Hypervisor Tools': 'VM-Tools konfigurieren'
 'Is the host set to UTC time?': 'Benutzt der Host UTC-Zeit?'
 'Configure UTC Time': 'UTC-Zeit konfigurieren'
-'Timezone: Zeitzone
+Timezone: Zeitzone
 'Timezone Selection': 'Auswahl Zeitzone'
 'Please enter the IP or hostname of the local mail server': 'Bitte geben sie den Hostnamen oder die IP-Adresse des lokalen Mailservers an'
 'Local Mail Server': 'Lokaler Mailserver'
 'Please enter your IANA country code': 'Bitte geben Sie Ihren Ländercode (IANA-Format) an'
 'Please enter your organization name (No spaces, dots, or underscores)': 'Bitte geben Sie Ihren Organisationsnamen an (Ohne: Leerzeichen, Punkte, Unterstriche)'
 'Organization Name': 'Organisationsname'
-'"Passwords do not match': "Passwörter stimmen nicht überein"
+'Passwords do not match': 'Passwörter stimmen nicht überein'
 'Enable Recursion': 'DNS-Rekursion aktivieren'
 'DNS Primary Address': 'Primärer DNS-Server'
 'Set DNS': 'DNS konfigurieren'
