--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.el.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.el.yml
@@ -1,20 +1,25 @@
+# Note: Language selections are in each respective language, not this language
+English: English
+Danish: Dansk
+Dutch: Nederlands
+French: Français
+Portuguese: Portugues
+German: Deutsche
+Turkish: Türk
+Italian: Italiano
+Greek: Ελληνικά
+Russian: Pусский
+Swedish: Svensk
+'Simplified Chinese': 簡體中文
+'Traditional Chinese': 繁體中文
+# End of language selections
+
 'Welcome to': 'Καλώς ήρθατε στο'
 Language: Γλώσσα 
 Next: Επόμενο
 Hostname: 'Όνομα υπολογιστή'
 'Please enter a hostname': 'Παρακαλώ εισάγετε ένα όνομα υπολογιστή'
 Back: Πίσω
-English: Αγγλικά
-Danish: Δανέζικα
-Dutch: Ολλανδικά
-French: Γαλλικά
-Portuguese: Πορτογαλικά
-German: Γερμανικά
-Turkish: Τούρικα
-Italian: Ιταλικά
-Greek: Ελληνικά
-'Simplified Chinese': 'Απλοποιημένα Κινέζικα'
-'Traditional Chinese': 'Παραδοσιακά Κινέζικα'
 'Domain Name': 'Όνομα Τομέα'
 'Please enter a domain name': 'Παρακαλώ εισάγετε ένα όνομα τομέα'
 Email: Email
