--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.nl.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.nl.yml
@@ -1,19 +1,25 @@
+# Note: Language selections are in each respective language, not this language
+English: English
+Danish: Dansk
+Dutch: Nederlands
+French: Français
+Portuguese: Portugues
+German: Deutsche
+Turkish: Türk
+Italian: Italiano
+Greek: Ελληνικά
+Russian: Pусский
+Swedish: Svensk
+'Simplified Chinese': 簡體中文
+'Traditional Chinese': 繁體中文
+# End of language selections
+
 'Welcome to': 'Welkom bij'
 'Language': 'Taal'
 'Next': 'Volgende'
 'Hostname': 'Hostnaam'
 'Please enter a hostname': 'Voer een hostnaam in'
 'Back': 'Terug'
-'English': 'English'
-'Danish': 'Danish'
-'Dutch': 'Nederlands'
-'French': 'Français'
-'Portuguese': 'Portugues'
-'German': 'Deutsche'
-'Turkish': 'Turkish'
-'Italian': 'Italiano'
-'Simplified Chinese': '簡體中文'
-'Traditional Chinese': '繁體中文'
 'Domain Name': 'Domeinnaam'
 'Please enter a domain name': 'Voer een domeinnaam in'
 'Email': 'E-mail'
