--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.pt_PT.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.pt_PT.yml
@@ -1,19 +1,25 @@
+# Note: Language selections are in each respective language, not this language
+English: English
+Danish: Dansk
+Dutch: Nederlands
+French: Français
+Portuguese: Portugues
+German: Deutsche
+Turkish: Türk
+Italian: Italiano
+Greek: Ελληνικά
+Russian: Pусский
+Swedish: Svensk
+'Simplified Chinese': 簡體中文
+'Traditional Chinese': 繁體中文
+# End of language selections
+
 'Welcome to': 'Bem-vindo'
 Language: Idioma
 Next: Seguinte
 Hostname: 'Nome do host' 
 'Please enter a hostname': 'Por favor escreva o nome do host/servidor'
 Back: Anterior
-English: English
-Danish: __Danish
-Dutch: Nederlands
-French: Français
-Portuguese: Portugues
-German: Deutsche
-Turkish: __Turkish
-Italian: Italiano
-'Simplified Chinese': 簡體中文
-'Traditional Chinese': 繁體中文
 'Domain Name': 'Nome do Dominio'
 'Please enter a domain name': 'Por favor insira um nome de dominio'
 Email: 'Endereco de email'
