--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.zh_CN.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.zh_CN.yml
@@ -1,19 +1,25 @@
+# Note: Language selections are in each respective language, not this language
+English: English
+Danish: Dansk
+Dutch: Nederlands
+French: Français
+Portuguese: Portugues
+German: Deutsche
+Turkish: Türk
+Italian: Italiano
+Greek: Ελληνικά
+Russian: Pусский
+Swedish: Svensk
+'Simplified Chinese': 簡體中文
+'Traditional Chinese': 繁體中文
+# End of language selections
+
 'Welcome to': '欢迎'
 Language: 语言
 Next: 下一个
 Hostname: 主机名
 'Please enter a hostname': '请输入主机名'
 Back: 上一个
-English: English
-Danish: __Danish
-Dutch: Nederlands
-French: Français
-Portuguese: Portugues
-German: Deutsche
-Turkish: __Turkish
-Italian: Italiano
-'Simplified Chinese': 簡體中文
-'Traditional Chinese': 繁體中文
 'Domain Name': '域名'
 'Please enter a domain name': '请输入域名'
 Email: 电子邮箱地址 
