--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.zh_TW.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.zh_TW.yml
@@ -1,19 +1,25 @@
+# Note: Language selections are in each respective language, not this language
+English: English
+Danish: Dansk
+Dutch: Nederlands
+French: Français
+Portuguese: Portugues
+German: Deutsche
+Turkish: Türk
+Italian: Italiano
+Greek: Ελληνικά
+Russian: Pусский
+Swedish: Svensk
+'Simplified Chinese': 簡體中文
+'Traditional Chinese': 繁體中文
+# End of language selections
+
 'Welcome to': '歡迎'
 'Language': '語言'
 'Next': '下一個'
 'Hostname': '伺服器名稱'
 'Please enter a hostname': '請輸入伺服器名稱'
 'Back': '上一個'
-'English': 'English'
-'Danish': '__Danish'
-'Dutch': 'Nederlands'
-'French': 'Français'
-'Portuguese': 'Portugues'
-'German': 'Deutsche'
-'Turkish': '__Turkish'
-'Italian': 'Italiano'
-'Simplified Chinese': '简体中文'
-'Traditional Chinese': '繁體中文'
 'Domain Name': '域名'
 'Please enter a domain name': '請輸入域名'
 'Email': '電郵地址'
