Prefix translations needed with __
Former-commit-id: 82835646cb5bb75127f169683be216220fce8629

--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.de.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.de.yml
@@ -38,6 +38,7 @@ Email: Email
 'Please enter a valid IPv6 address': 'Bitte eine gültige IPv6-Adresse eingeben'
 'IPv6 Address': 'IPv6-Adresse'
 'Please enter a valid IPv6 gateway': 'Bitte einen gültigen IPv6-Gateway eingeben'
+'IPv6 Prefix': '__IPv6 Prefix'
 'IPv6 Gateway': 'IPv6-Gateway'
 'Do you want to enable full DNS Recursion?': 'Wollen Sie DNS-Rekursion aktivieren?'
 'Configure DNS Recursion': 'DNS-Rekursion konfigurieren'
@@ -66,7 +67,6 @@ Timezone: Zeitzone
 'Please enter your IANA country code': 'Bitte geben Sie Ihren Ländercode (IANA-Format) an'
 'Please enter your organization name (No spaces, dots, or underscores)': 'Bitte geben Sie Ihren Organisationsnamen an (Ohne: Leerzeichen, Punkte, Unterstriche)'
 'Organization Name': 'Organisationsname'
-'Passwords do not match': 'Passwörter stimmen nicht überein'
 'Enable Recursion': 'DNS-Rekursion aktivieren'
 'DNS Primary Address': 'Primärer DNS-Server'
 'Set DNS': 'DNS konfigurieren'
@@ -78,12 +78,3 @@ Timezone: Zeitzone
 'Host is UTC': 'Server ist auf UTC eingestellt'
 'Set IP Mask': 'IP-Maske eingeben'
 'IANA Country Code': 'IANA-Ländercode'
-'IPv4 Netmask:' : 'IPv4-Netzmaske:'
-'IPv4 Gateway:' : 'IPv4-Gateway:'
-'IPv6 Mask': 'IPv6-Netzmaske:'
-'IPv6 Gateway:' : 'IPv6-Gateway:'
-'Web Admin Username:': 'Web-Admin Benutzername:'
-'Web Admin Password:': 'Web-Admin Passwort:'
-'Console Admin Username:': 'Konsolenbenutzer:'
-'Console Admin Password:': 'Konsolenpasswort:'
-'Server Mail Locale:': 'Server Mail Sprache:'
