--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.pt_PT.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.pt_PT.yml
@@ -26,3 +26,56 @@ Email: 'Endereco de email'
 'Please enter an email address for important notifications': 'Por favor escreva um endereço de email para as notificacoes importantes'
 'IPv4 Address': 'Endereco IPv4'
 'Please enter a valid IPv4 address': 'Por favor escreva um endereco IPv4 valido' 
+'IPv4 Netmask': '__IPv4 Netmask'
+'Please enter a valid IPv4 netmask': '__Please enter a valid IPv4 netmask'
+'Please enter a valid IPv4 gateway': '__Please enter a valid IPv4 gateway'
+'IPv4 Gateway': '__IPv4 Gateway'
+'Do you want to set a static IPv4 address?': '__Do you want to set a static IPv4 address?'
+'Yes': '__Yes'
+'No': '__No'
+'Do you want to set a static IPv6 address?': '__Do you want to set a static IPv6 address?'
+'Configure IPv6': '__Configure IPv6'
+'Please enter a valid IPv6 address': '__Please enter a valid IPv6 address'
+'IPv6 Address': '__IPv6 Address'
+'Please enter a valid IPv6 prefix': '__Please enter a valid IPv6 prefix'
+'IPv6 Prefix': '__IPv6 Prefix'
+'Please enter a valid IPv6 gateway': '__Please enter a valid IPv6 gateway'
+'IPv6 Gateway': '__IPv6 Gateway'
+'Do you want to enable full DNS Recursion?': '__Do you want to enable full DNS Recursion?'
+'Configure DNS Recursion': '__Configure DNS Recursion'
+'Please enter the primary DNS address': '__Please enter the primary DNS address'
+'Primary DNS': '__Primary DNS'
+'Please enter the secondary DNS address': '__Please enter the secondary DNS address'
+'Secondary DNS': '__Secondary DNS'
+'Please enter the username for the admin web interface': '__Please enter the username for the admin web interface'
+'Web Admin Username': '__Web Admin Username'
+'Please enter the web admin password': '__Please enter the web admin password'
+'Please re-enter the web admin password': '__Please re-enter the web admin password'
+'Web Admin Password': '__Web Admin Password'
+'Please enter the username for the admin console interface': '__Please enter the username for the admin console interface'
+'Console Admin Username': '__Console Admin Username'
+'Please enter the console admin password': '__Please enter the console admin password'
+'Please re-enter the console admin password': '__Please re-enter the console admin password'
+'Console Admin Password': '__Console Admin Password'
+'Do you want to install hypervisor tools for your hypervisor?': '__Do you want to install hypervisor tools for your hypervisor?'
+'Configure Hypervisor Tools': '__Configure Hypervisor Tools'
+'Is the host set to UTC time?': '__Is the host set to UTC time?'
+'Configure UTC Time': '__Configure UTC Time'
+Timezone: __Timezone
+'Timezone Selection': '__Timezone Selection'
+'Please enter the IP or hostname of the local mail server': '__Please enter the IP or hostname of the local mail server'
+'Local Mail Server': '__Local Mail Server'
+'Please enter your IANA country code': '__Please enter your IANA country code'
+'Please enter your organization name (No spaces, dots, or underscores)': '__Please enter your organization name (No spaces, dots, or underscores)'
+'Organization Name': '__Organization Name'
+'Enable Recursion': '__Enable Recursion'
+'DNS Primary Address': '__DNS Primary Address'
+'Set DNS': '__Set DNS'
+'DNS Secondary Address': '__DNS Secondary Address'
+'Configure IPv4': '__Configure IPv4'
+'Set IP Address': '__Set IP Address'
+'Set IP Netmask': '__Set IP Netmask'
+'Set IP Gateway': '__Set IP Gateway'
+'Host is UTC': '__Host is UTC'
+'Set IP Mask': '__Set IP Mask'
+'IANA Country Code': '__IANA Country Code'
