--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.cz.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.cz.yml
@@ -81,3 +81,4 @@ Timezone: 'Časová zóna'
 'Host is UTC': 'Nastaven UTC čas'
 'Set IP Mask': 'Nastavit IP síťovou masku'
 'IANA Country Code': 'IANA kód země'
+'Verify Settings': '__Verify Settings'
