--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.da.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.da.yml
@@ -81,3 +81,4 @@ Timezone: Tidszone
 'Host is UTC': 'Host er UTC'
 'Set IP Mask': 'Sæt IP Mask'
 'IANA Country Code': 'IANA landekode'
+'Verify Settings': '__Verify Settings'
