--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.de.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.de.yml
@@ -80,3 +80,4 @@ Timezone: Zeitzone
 'Host is UTC': 'Server ist auf UTC eingestellt'
 'Set IP Mask': 'IP-Maske eingeben'
 'IANA Country Code': 'IANA-Ländercode'
+'Verify Settings': '__Verify Settings'
