--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.el.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.el.yml
@@ -81,3 +81,4 @@
 'Host is UTC': 'Ο Υπολογιστής είναι σε UTC'
 'Set IP Mask': 'Καταχώριση IP Μάσκας'
 'IANA Country Code': 'IANA Κωδικός Χώρας'
+'Verify Settings': '__Verify Settings'
