--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.en.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.en.yml
@@ -81,3 +81,4 @@ Timezone: Timezone
 'Host is UTC': 'Host is UTC'
 'Set IP Mask': 'Set IP Mask'
 'IANA Country Code': 'IANA Country Code'
+'Verify Settings': 'Verify Settings'
