--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.fr.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.fr.yml
@@ -80,3 +80,4 @@
 'Host is UTC': 'L''hôte est configuré sur l''heure UTC'
 'Set IP Mask': 'Déterminer le masque'
 'IANA Country Code': 'Code pays IANA [FR]'
+'Verify Settings': '__Verify Settings'
