--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.it.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.it.yml
@@ -81,3 +81,4 @@ Timezone: 'Fuso Orario'
 'Host is UTC': 'L''host è UTC'
 'Set IP Mask': 'Configura IP Mask'
 'IANA Country Code': 'Codice IANA per il paese'
+'Verify Settings': '__Verify Settings'
