--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.nl.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.nl.yml
@@ -82,3 +82,4 @@
 'Host is UTC': 'Host is UTC'
 'Set IP Mask': 'Stel IP-subnetmasker in'
 'IANA Country Code': 'IANA landcode'
+'Verify Settings': '__Verify Settings'
