--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.no.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.no.yml
@@ -79,3 +79,4 @@ Timezone: Timezone
 'Host is UTC': 'Host er UTC'
 'Set IP Mask': 'Set IP Maske'
 'IANA Country Code': 'IANA Land kode'
+'Verify Settings': '__Verify Settings'
