--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.pt_PT.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.pt_PT.yml
@@ -81,3 +81,4 @@ Timezone: __Timezone
 'Host is UTC': '__Host is UTC'
 'Set IP Mask': '__Set IP Mask'
 'IANA Country Code': '__IANA Country Code'
+'Verify Settings': '__Verify Settings'
