--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.sv.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.sv.yml
@@ -80,3 +80,4 @@ Timezone: Tidzon
 'Host is UTC': 'Värden är UTC'
 'Set IP Mask': 'Ställ in IP-mask'
 'IANA Country Code': 'IANA Lands kod'
+'Verify Settings': '__Verify Settings'
