--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.ru.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/messages.ru.yml
@@ -81,3 +81,4 @@ Timezone: Часовой пояс
 'Host is UTC': 'UTC хоста'
 'Set IP Mask': 'Установить IP маску'
 'IANA Country Code': 'IANA код страны'
+'Verify Settings': '__Verify Settings'
