--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/validators.el.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/validators.el.yml
@@ -1,1 +1,3 @@
+'Enter a valid hostname': '__Enter a valid hostname'
 'Passwords do not match': 'Οι κωδικοί πρόσβασης δεν είναι ίδιοι'
+'Web Username must be alphanumeric (up to 30 characters starting with a letter or _) or a valid email address': '__Web Username must be alphanumeric (up to 30 characters starting with a letter or _) or a valid email address'
