--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/validators.en.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/validators.en.yml
@@ -1,1 +1,3 @@
+'Enter a valid hostname': 'Enter a valid hostname'
 'Passwords do not match': 'Passwords do not match'
+'Web Username must be alphanumeric (up to 30 characters starting with a letter or _) or a valid email address': 'Web Username must be alphanumeric (up to 30 characters starting with a letter or _) or a valid email address'
