--- a/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/validators.fr.yml
+++ b/rpmbuild/SOURCES/eFa-4.0.0/eFaInit/app/Resources/translations/validators.fr.yml
@@ -1,2 +1,3 @@
 'Enter a valid hostname': 'Entrez un nom d''hôte valide'
 'Passwords do not match': 'Les mots de passe ne correspondant pas'
+'Web Username must be alphanumeric (up to 30 characters starting with a letter or _) or a valid email address': '__Web Username must be alphanumeric (up to 30 characters starting with a letter or _) or a valid email address'
