--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/validators.cz.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/validators.cz.yml
@@ -1,3 +1,3 @@
-'Enter a valid hostname': '__Enter a valid hostname'
+'Enter a valid hostname': 'Zadejte platný název serveru'
 'Passwords do not match': 'Hesla se neshodují'
-'Web Username must be alphanumeric (up to 30 characters starting with a letter or _) or a valid email address': '__Web Username must be alphanumeric (up to 30 characters starting with a letter or _) or a valid email address'
+'Web Username must be alphanumeric (up to 30 characters starting with a letter or _) or a valid email address': 'Uživatelské jméno webového uživatele musí být alfanumerické (maximálně 30 znaků, začínající písmenem nebo znakem _) nebo platná e-mailová adresa'
