--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.it.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.it.yml
@@ -82,3 +82,5 @@ Timezone: 'Fuso Orario'
 'Set IP Mask': 'Configura IP Mask'
 'IANA Country Code': 'Codice IANA per il paese'
 'Verify Settings': '__Verify Settings'
+'Enable IPv6 DNS': '__Enable IPv6 DNS'
+'Do you want to Enable IPv6 DNS?': '__Do you want to Enable IPv6 DNS?'
