--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.pt_PT.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.pt_PT.yml
@@ -82,3 +82,5 @@ Timezone: __Timezone
 'Set IP Mask': '__Set IP Mask'
 'IANA Country Code': '__IANA Country Code'
 'Verify Settings': '__Verify Settings'
+'Enable IPv6 DNS': '__Enable IPv6 DNS'
+'Do you want to Enable IPv6 DNS?': '__Do you want to Enable IPv6 DNS?'
