--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.nl.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.nl.yml
@@ -68,7 +68,7 @@
 'Please enter the IP or hostname of the local mail server': 'Voer IP-adres of hostnaam in van de lokale mailserver'
 'Local Mail Server': 'Lokale mailserver'
 'Please enter your IANA country code': 'Voer uw IANA landcode in'
-'Please enter your organization name (No spaces, dots, or underscores)': 'Voer uw organisatienaam in (geen spaties, punten of laaglingende streep)'
+'Please enter your organization name (No spaces, dots, or underscores)': 'Voer uw organisatienaam in (geen spaties, punten of laagliggende streep)'
 'Organization Name': 'Organisatienaam'
 'Passwords do not match': 'Wachtwoorden komen niet overeen'
 'Enable Recursion': 'Schakel recursie in'
@@ -82,6 +82,6 @@
 'Host is UTC': 'Host is UTC'
 'Set IP Mask': 'Stel IP-subnetmasker in'
 'IANA Country Code': 'IANA landcode'
-'Verify Settings': '__Verify Settings'
+'Verify Settings': 'Controleer instellingen'
 'Enable IPv6 DNS': '__Enable IPv6 DNS'
 'Do you want to Enable IPv6 DNS?': '__Do you want to Enable IPv6 DNS?'
