--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.zh_TW.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.zh_TW.yml
@@ -19,13 +19,13 @@
 'Welcome to': '歡迎'
 'Language': '語言'
 'Next': '下一個'
-'Hostname': '伺服器名稱'
-'Please enter a hostname': '請輸入伺服器名稱'
+'Hostname': '主機名稱'
+'Please enter a hostname': '請輸入主機名稱'
 'Back': '上一個'
-'Domain Name': '域名'
-'Please enter a domain name': '請輸入域名'
-'Email': '電郵地址'
-'Please enter an email address for important notifications': '請輸入能夠接收重要通知的電郵地址'
+'Domain Name': '網域名稱'
+'Please enter a domain name': '請輸入網域名稱'
+'Email': '電子郵件'
+'Please enter an email address for important notifications': '請輸入可接收重要通知的電子郵件地址'
 'IPv4 Address': 'IPv4位址'
 'Please enter a valid IPv4 address': '請輸入有效的IPv4位址'
 'IPv4 Netmask': 'IPv4子網路遮罩'
@@ -36,19 +36,19 @@
 'Yes': '是'
 'No': '否'
 'Do you want to set a static IPv6 address?': '是否要設定靜態IPv6地址？'
-'Configure IPv6': '配置IPv6'
+'Configure IPv6': '設定IPv6'
 'Please enter a valid IPv6 address': '請輸入有效的IPv6地址'
 'IPv6 Address': 'IPv6地址'
-'Please enter a valid IPv6 prefix': '__Please enter a valid IPv6 prefix'
+'Please enter a valid IPv6 prefix': '_Please enter a valid IPv6 prefix'
 'IPv6 Prefix': 'IPv6 __Prefix'
 'Please enter a valid IPv6 gateway': '請輸入有效的IPv6閘道'
 'IPv6 Gateway': 'IPv6閘道'
 'Do you want to enable full DNS Recursion?': '是否要啟用完全DNS遞迴？'
-'Configure DNS Recursion': '配置DNS遞迴'
-'Please enter the primary DNS address': '請輸入主DNS地址'
-'Primary DNS': '主DNS'
-'Please enter the secondary DNS address': '請輸入輔助DNS地址'
-'Secondary DNS': '輔助DNS'
+'Configure DNS Recursion': '設定DNS遞迴'
+'Please enter the primary DNS address': '請輸入主要DNS地址'
+'Primary DNS': '主要DNS'
+'Please enter the secondary DNS address': '請輸入次要DNS地址'
+'Secondary DNS': '次要DNS'
 'Please enter the username for the admin web interface': '請輸入網頁系统管理員用戶名'
 'Web Admin Username': '網頁系统管理員用戶名'
 'Please enter the web admin password': '請輸入網頁系统管理員密碼'
@@ -60,27 +60,27 @@
 'Please re-enter the console admin password': '請重新輸入控制台管理員密碼'
 'Console Admin Password': '控制台管理員密碼'
 'Do you want to install hypervisor tools for your hypervisor?': '是否要為管理程式安裝虛擬機器管理程式工具？'
-'Configure Hypervisor Tools': '配置管理程式工具'
-'Is the host set to UTC time?': '伺服器是否設定為UTC時間？'
-'Configure UTC Time': '配置UTC時間'
+'Configure Hypervisor Tools': '設定管理程式工具'
+'Is the host set to UTC time?': '主機是否設定為UTC時間？'
+'Configure UTC Time': '設定UTC時間'
 'Timezone': '時區'
-'Timezone Selection': '時區選擇'
-'Please enter the IP or hostname of the local mail server': '請輸入本地電郵伺服器的IP地址或者伺服器名稱'
-'Local Mail Server': '本地電郵伺服器'
+'Timezone Selection': '選擇時區'
+'Please enter the IP or hostname of the local mail server': '請輸入本區域郵件伺服器的IP地址或者主機名稱'
+'Local Mail Server': '本區郵件伺服器'
 'Please enter your IANA country code': '請輸入您的國家頂級域名'
-'Please enter your organization name (No spaces, dots, or underscores)': '請輸入您的組織名稱（只可以是漢字、數字或英文字母）'
+'Please enter your organization name (No spaces, dots, or underscores)': '請輸入您的組織名稱（不可有空白字元,點或是下底線）'
 'Organization Name': '組織名稱'
 'Enable Recursion': '啟用遞迴'
-'DNS Primary Address': 'DNS主要地址'
+'DNS Primary Address': '主要DNS位址'
 'Set DNS': '設定DNS'
-'DNS Secondary Address': 'DNS輔助地址'
-'Configure IPv4': '配置IPv4'
-'Set IP Address': '設定IP地址'
+'DNS Secondary Address': '次要DNS位址'
+'Configure IPv4': '設定IPv4'
+'Set IP Address': '設定IP位址'
 'Set IP Netmask': '設定IP子網路遮罩'
 'Set IP Gateway': '設定IP閘道'
-'Host is UTC': '伺服器為UTC時間'
+'Host is UTC': '主機為UTC時間'
 'Set IP Mask': '設定IP子網路遮罩'
 'IANA Country Code': '國家頂級域名'
-'Verify Settings': '__Verify Settings'
-'Enable IPv6 DNS': '__Enable IPv6 DNS'
-'Do you want to Enable IPv6 DNS?': '__Do you want to Enable IPv6 DNS?'
+'Verify Settings': '確認設定'
+'Enable IPv6 DNS': '啟用IPv6 DNS'
+'Do you want to Enable IPv6 DNS?': '你是否要啟用IPv6 DNS?'
