--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.cz.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.cz.yml
@@ -81,6 +81,6 @@
 'Host is UTC': 'Nastaven UTC čas'
 'Set IP Mask': 'Nastavit IP síťovou masku'
 'IANA Country Code': 'IANA kód země'
-'Verify Settings': '__Verify Settings'
-'Enable IPv6 DNS': '__Enable IPv6 DNS'
-'Do you want to Enable IPv6 DNS?': '__Do you want to Enable IPv6 DNS?'
+'Verify Settings': 'Kontrola nastavení'
+'Enable IPv6 DNS': 'Aktivace IPv6 DNS'
+'Do you want to Enable IPv6 DNS?': 'Chcete aktivovat IPv6 DNS?'
