--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.pt_PT.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.pt_PT.yml
@@ -3,7 +3,7 @@
 'Danish': 'Dansk'
 'Dutch': 'Nederlands'
 'French': 'Français'
-'Portuguese': 'Portugues'
+'Portuguese': 'Português'
 'German': 'Deutsche'
 'Turkish': 'Türk'
 'Italian': 'Italiano'
@@ -16,71 +16,71 @@
 'Traditional Chinese': '繁體中文'
 # End of language selections
 
-'Welcome to': 'Bem-vindo'
+'Welcome to': 'Bem-vindo a(o)'
 Language: Idioma
 Next: Seguinte
-Hostname: 'Nome do host' 
-'Please enter a hostname': 'Por favor escreva o nome do host/servidor'
+Hostname: 'Nome do servidor anfitrião' 
+'Please enter a hostname': 'Por favor escreva o nome do servidor anfitrião'
 Back: Anterior
-'Domain Name': 'Nome do Dominio'
-'Please enter a domain name': 'Por favor insira um nome de dominio'
-Email: 'Endereco de email'
+'Domain Name': 'Nome do Domínio'
+'Please enter a domain name': 'Por favor insira um nome de domínio'
+Email: 'Endereço de email'
 'Please enter an email address for important notifications': 'Por favor escreva um endereço de email para as notificacoes importantes'
 'IPv4 Address': 'Endereco IPv4'
-'Please enter a valid IPv4 address': 'Por favor escreva um endereco IPv4 valido' 
-'IPv4 Netmask': '__IPv4 Netmask'
-'Please enter a valid IPv4 netmask': '__Please enter a valid IPv4 netmask'
-'Please enter a valid IPv4 gateway': '__Please enter a valid IPv4 gateway'
-'IPv4 Gateway': '__IPv4 Gateway'
-'Do you want to set a static IPv4 address?': '__Do you want to set a static IPv4 address?'
-'Yes': '__Yes'
-'No': '__No'
-'Do you want to set a static IPv6 address?': '__Do you want to set a static IPv6 address?'
-'Configure IPv6': '__Configure IPv6'
-'Please enter a valid IPv6 address': '__Please enter a valid IPv6 address'
-'IPv6 Address': '__IPv6 Address'
-'Please enter a valid IPv6 prefix': '__Please enter a valid IPv6 prefix'
-'IPv6 Prefix': '__IPv6 Prefix'
-'Please enter a valid IPv6 gateway': '__Please enter a valid IPv6 gateway'
-'IPv6 Gateway': '__IPv6 Gateway'
-'Do you want to enable full DNS Recursion?': '__Do you want to enable full DNS Recursion?'
-'Configure DNS Recursion': '__Configure DNS Recursion'
-'Please enter the primary DNS address': '__Please enter the primary DNS address'
-'Primary DNS': '__Primary DNS'
-'Please enter the secondary DNS address': '__Please enter the secondary DNS address'
-'Secondary DNS': '__Secondary DNS'
-'Please enter the username for the admin web interface': '__Please enter the username for the admin web interface'
-'Web Admin Username': '__Web Admin Username'
-'Please enter the web admin password': '__Please enter the web admin password'
-'Please re-enter the web admin password': '__Please re-enter the web admin password'
-'Web Admin Password': '__Web Admin Password'
-'Please enter the username for the admin console interface': '__Please enter the username for the admin console interface'
-'Console Admin Username': '__Console Admin Username'
-'Please enter the console admin password': '__Please enter the console admin password'
-'Please re-enter the console admin password': '__Please re-enter the console admin password'
-'Console Admin Password': '__Console Admin Password'
-'Do you want to install hypervisor tools for your hypervisor?': '__Do you want to install hypervisor tools for your hypervisor?'
-'Configure Hypervisor Tools': '__Configure Hypervisor Tools'
-'Is the host set to UTC time?': '__Is the host set to UTC time?'
-'Configure UTC Time': '__Configure UTC Time'
-Timezone: __Timezone
-'Timezone Selection': '__Timezone Selection'
-'Please enter the IP or hostname of the local mail server': '__Please enter the IP or hostname of the local mail server'
-'Local Mail Server': '__Local Mail Server'
-'Please enter your IANA country code': '__Please enter your IANA country code'
-'Please enter your organization name (No spaces, dots, or underscores)': '__Please enter your organization name (No spaces, dots, or underscores)'
-'Organization Name': '__Organization Name'
-'Enable Recursion': '__Enable Recursion'
-'DNS Primary Address': '__DNS Primary Address'
-'Set DNS': '__Set DNS'
-'DNS Secondary Address': '__DNS Secondary Address'
-'Configure IPv4': '__Configure IPv4'
-'Set IP Address': '__Set IP Address'
-'Set IP Netmask': '__Set IP Netmask'
-'Set IP Gateway': '__Set IP Gateway'
-'Host is UTC': '__Host is UTC'
-'Set IP Mask': '__Set IP Mask'
-'IANA Country Code': '__IANA Country Code'
-'Verify Settings': '__Verify Settings'
-'Enable IPv6 DNS': '__Enable IPv6 DNS'
-'Do you want to Enable IPv6 DNS?': '__Do you want to Enable IPv6 DNS?'
+'Please enter a valid IPv4 address': 'Por favor insira um endereco IPv4 válido' 
+'IPv4 Netmask': 'Máscara IPv4'
+'Please enter a valid IPv4 netmask': 'por favor insira uma máscara IPv4 válida'
+'Please enter a valid IPv4 gateway': 'por favor insira um gateway IPv4 válido'
+'IPv4 Gateway': 'Gateway IPv4'
+'Do you want to set a static IPv4 address?': 'Você quer definir um endereço IPv4 estático?'
+'Yes': 'Sim'
+'No': 'Não'
+'Do you want to set a static IPv6 address?': 'Você quer definir um endereço IPv6 estático?'
+'Configure IPv6': 'Configurar IPv6'
+'Please enter a valid IPv6 address': 'Por favor insira um endereço IPv6 válido'
+'IPv6 Address': 'Endereço IPv6'
+'Please enter a valid IPv6 prefix': 'Por favor insira um prefixo IPv6 válido'
+'IPv6 Prefix': 'Prefixo IPv6'
+'Please enter a valid IPv6 gateway': 'Por favor insira um gateway IPv6 válido'
+'IPv6 Gateway': 'Gateway IPv6'
+'Do you want to enable full DNS Recursion?': 'Você quer habilitar a Recursão total de DNS?'
+'Configure DNS Recursion': 'Configurar a recursão de DNS'
+'Please enter the primary DNS address': 'Por favor insira o endereço DNS primário'
+'Primary DNS': 'DNS primário'
+'Please enter the secondary DNS address': 'Por favor insira o endereço DNS secundário'
+'Secondary DNS': 'DNS secundário'
+'Please enter the username for the admin web interface': 'Por favor insira o nome de utilizador para a interface Web de administração'
+'Web Admin Username': 'Nome do utilizador Web Admin'
+'Please enter the web admin password': 'Por favor insira a palavra-passe para o Web Admin'
+'Please re-enter the web admin password': 'Por favor repita a palavra-passe para o Web Admin'
+'Web Admin Password': 'Palavra-passe para o Web Admin'
+'Please enter the username for the admin console interface': 'Por favor insira o nome de utilizador para a interface da consola de Administração'
+'Console Admin Username': 'Nome do Utilizador Console Admin'
+'Please enter the console admin password': 'Por favor insira a palavra-passe do Utilizador Console Admin'
+'Please re-enter the console admin password': 'Por favor repita a palavra-passe do Utilizador Console Admin'
+'Console Admin Password': 'Palavra-passe para o Console Admin'
+'Do you want to install hypervisor tools for your hypervisor?': 'Você quer instalar ferramentas de hipervisor para seu hipervisor?'
+'Configure Hypervisor Tools': 'Configurar ferramentas do hypervisor'
+'Is the host set to UTC time?': 'O anfitrião está configurado para o horário UTC?'
+'Configure UTC Time': 'Configurar hora UTC'
+Timezone: 'Fuso horário'
+'Timezone Selection': 'Seleção de fuso horário'
+'Please enter the IP or hostname of the local mail server': 'Por favor digite o IP ou o nome do anfitrião do servidor de correio local'
+'Local Mail Server': 'Servidor de correio local'
+'Please enter your IANA country code': 'Por favor insira seu código de país da IANA'
+'Please enter your organization name (No spaces, dots, or underscores)': 'Por favor insira o nome da sua organização (sem espaços, pontos ou sublinhados)'
+'Organization Name': 'Nome da organização'
+'Enable Recursion': 'Atcivar recursão'
+'DNS Primary Address': 'Endereço Primário do DNS'
+'Set DNS': 'Definir DNS'
+'DNS Secondary Address': 'Endereço Secundário do DNS'
+'Configure IPv4': 'Configurar o IPv4'
+'Set IP Address': 'Definir endereço IP'
+'Set IP Netmask': 'Definir máscara de rede IP'
+'Set IP Gateway': 'Definir gateway IP'
+'Host is UTC': 'Anfitrião é UTC'
+'Set IP Mask': 'Definir máscara IP'
+'IANA Country Code': 'Código do país da IANA'
+'Verify Settings': 'Verificar configurações'
+'Enable IPv6 DNS': 'Activar DNS IPv6'
+'Do you want to Enable IPv6 DNS?': 'Você quer activar o DNS IPv6?'
