--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/validators.pt-PT.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/validators.pt-PT.yml
@@ -1,3 +1,3 @@
-'Enter a valid hostname': 'Insira um nome de host válido'
-'Passwords do not match': '__Passwords do not match'
-'Web Username must be alphanumeric (up to 30 characters starting with a letter or _) or a valid email address': '__Web Username must be alphanumeric (up to 30 characters starting with a letter or _) or a valid email address'
+'Enter a valid hostname': 'Insira um nome de servidor anfitrião válido'
+'Passwords do not match': 'As palavras-passe não coincidem'
+'Web Username must be alphanumeric (up to 30 characters starting with a letter or _) or a valid email address': 'O nome do utilizador da Web deve ser alfanumérico (até 30 caracteres começando com uma letra ou _), ou um endereço de email válido'
