--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.de.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.de.yml
@@ -40,7 +40,7 @@
 'Please enter a valid IPv6 address': 'Bitte eine gültige IPv6-Adresse eingeben'
 'IPv6 Address': 'IPv6-Adresse'
 'Please enter a valid IPv6 gateway': 'Bitte einen gültigen IPv6-Gateway eingeben'
-'IPv6 Prefix': '__IPv6 Prefix'
+'IPv6 Prefix': 'IPv6 Präfix'
 'IPv6 Gateway': 'IPv6-Gateway'
 'Do you want to enable full DNS Recursion?': 'Wollen Sie DNS-Rekursion aktivieren?'
 'Configure DNS Recursion': 'DNS-Rekursion konfigurieren'
@@ -80,6 +80,6 @@
 'Host is UTC': 'Server ist auf UTC eingestellt'
 'Set IP Mask': 'IP-Maske eingeben'
 'IANA Country Code': 'IANA-Ländercode'
-'Verify Settings': '__Verify Settings'
-'Enable IPv6 DNS': '__Enable IPv6 DNS'
-'Do you want to Enable IPv6 DNS?': '__Do you want to Enable IPv6 DNS?'
+'Verify Settings': 'Überprüfen der Einstellungen'
+'Enable IPv6 DNS': 'IPv6 basiertes DNS einschalten'
+'Do you want to Enable IPv6 DNS?': 'Wollen Sie IPv6 DNS einschalten ?'
