--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.zh_TW.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.zh_TW.yml
@@ -39,8 +39,8 @@
 'Configure IPv6': '設定IPv6'
 'Please enter a valid IPv6 address': '請輸入有效的IPv6地址'
 'IPv6 Address': 'IPv6地址'
-'Please enter a valid IPv6 prefix': '_Please enter a valid IPv6 prefix'
-'IPv6 Prefix': 'IPv6 __Prefix'
+'Please enter a valid IPv6 prefix': '請輸入有效的IPv6 Prefix'
+'IPv6 Prefix': 'IPv6 Prefix'
 'Please enter a valid IPv6 gateway': '請輸入有效的IPv6閘道'
 'IPv6 Gateway': 'IPv6閘道'
 'Do you want to enable full DNS Recursion?': '是否要啟用完全DNS遞迴？'
