--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.zh_CN.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.zh_CN.yml
@@ -17,70 +17,70 @@
 # End of language selections
 
 'Welcome to': '欢迎'
-Language: 语言
-Next: 下一个
-Hostname: 主机名
+'Language': '语言'
+'Next': '下一个'
+'Hostname': '主机名'
 'Please enter a hostname': '请输入主机名'
-Back: 上一个
+'Back': '上一个'
 'Domain Name': '域名'
 'Please enter a domain name': '请输入域名'
-Email: 电子邮箱地址 
+'Email': '电子邮件地址' 
 'Please enter an email address for important notifications': '请输入能够接收重要通知的电子邮箱地址'
 'IPv4 Address': 'IPv4 地址'
 'Please enter a valid IPv4 address': '请输入有效的 IPv4 地址'
-'IPv4 Netmask': '__IPv4 Netmask'
-'Please enter a valid IPv4 netmask': '__Please enter a valid IPv4 netmask'
-'Please enter a valid IPv4 gateway': '__Please enter a valid IPv4 gateway'
-'IPv4 Gateway': '__IPv4 Gateway'
-'Do you want to set a static IPv4 address?': '__Do you want to set a static IPv4 address?'
-'Yes': '__Yes'
-'No': '__No'
-'Do you want to set a static IPv6 address?': '__Do you want to set a static IPv6 address?'
-'Configure IPv6': '__Configure IPv6'
-'Please enter a valid IPv6 address': '__Please enter a valid IPv6 address'
-'IPv6 Address': '__IPv6 Address'
-'Please enter a valid IPv6 prefix': '__Please enter a valid IPv6 prefix'
-'IPv6 Prefix': '__IPv6 Prefix'
-'Please enter a valid IPv6 gateway': '__Please enter a valid IPv6 gateway'
-'IPv6 Gateway': '__IPv6 Gateway'
-'Do you want to enable full DNS Recursion?': '__Do you want to enable full DNS Recursion?'
-'Configure DNS Recursion': '__Configure DNS Recursion'
-'Please enter the primary DNS address': '__Please enter the primary DNS address'
-'Primary DNS': '__Primary DNS'
-'Please enter the secondary DNS address': '__Please enter the secondary DNS address'
-'Secondary DNS': '__Secondary DNS'
-'Please enter the username for the admin web interface': '__Please enter the username for the admin web interface'
-'Web Admin Username': '__Web Admin Username'
-'Please enter the web admin password': '__Please enter the web admin password'
-'Please re-enter the web admin password': '__Please re-enter the web admin password'
-'Web Admin Password': '__Web Admin Password'
-'Please enter the username for the admin console interface': '__Please enter the username for the admin console interface'
-'Console Admin Username': '__Console Admin Username'
-'Please enter the console admin password': '__Please enter the console admin password'
-'Please re-enter the console admin password': '__Please re-enter the console admin password'
-'Console Admin Password': '__Console Admin Password'
-'Do you want to install hypervisor tools for your hypervisor?': '__Do you want to install hypervisor tools for your hypervisor?'
-'Configure Hypervisor Tools': '__Configure Hypervisor Tools'
-'Is the host set to UTC time?': '__Is the host set to UTC time?'
-'Configure UTC Time': '__Configure UTC Time'
-Timezone: __Timezone
-'Timezone Selection': '__Timezone Selection'
-'Please enter the IP or hostname of the local mail server': '__Please enter the IP or hostname of the local mail server'
-'Local Mail Server': '__Local Mail Server'
-'Please enter your IANA country code': '__Please enter your IANA country code'
-'Please enter your organization name (No spaces, dots, or underscores)': '__Please enter your organization name (No spaces, dots, or underscores)'
-'Organization Name': '__Organization Name'
-'Enable Recursion': '__Enable Recursion'
-'DNS Primary Address': '__DNS Primary Address'
-'Set DNS': '__Set DNS'
-'DNS Secondary Address': '__DNS Secondary Address'
-'Configure IPv4': '__Configure IPv4'
-'Set IP Address': '__Set IP Address'
-'Set IP Netmask': '__Set IP Netmask'
-'Set IP Gateway': '__Set IP Gateway'
-'Host is UTC': '__Host is UTC'
-'Set IP Mask': '__Set IP Mask'
-'IANA Country Code': '__IANA Country Code'
-'Verify Settings': '__Verify Settings'
-'Enable IPv6 DNS': '__Enable IPv6 DNS'
-'Do you want to Enable IPv6 DNS?': '__Do you want to Enable IPv6 DNS?'
+'IPv4 Netmask': 'IPv4 网络掩码'
+'Please enter a valid IPv4 netmask': '请输入有效的IPv4网络掩码'
+'Please enter a valid IPv4 gateway': '请输入有效的IPv4网关'
+'IPv4 Gateway': 'IPv4 网关'
+'Do you want to set a static IPv4 address?': '你想设置一个静态的IPv4地址吗?'
+'Yes': '是'
+'No': '否'
+'Do you want to set a static IPv6 address?': '你想设置一个静态的IPv6地址么?'
+'Configure IPv6': '配置IPv6'
+'Please enter a valid IPv6 address': '请键入一个有效的IPv6地址'
+'IPv6 Address': 'IPv6地址'
+'Please enter a valid IPv6 prefix': '请键入一个有效的IPv6前缀(prefix)'
+'IPv6 Prefix': 'IPv6前缀(Prefix)'
+'Please enter a valid IPv6 gateway': '请键入一个有效的IPv6网关'
+'IPv6 Gateway': 'IPv6 网关'
+'Do you want to enable full DNS Recursion?': '你想启用完整的DNS 递归模式?'
+'Configure DNS Recursion': '配置DNS递归模式'
+'Please enter the primary DNS address': '设置首要的DNS服务器地址'
+'Primary DNS': '首要DNS服务器'
+'Please enter the secondary DNS address': '设置次要DNS服务器地址'
+'Secondary DNS': '次要DNS服务器'
+'Please enter the username for the admin web interface': '请键入web界面管理员的用户名'
+'Web Admin Username': 'web界面管理员的用户名'
+'Please enter the web admin password': '请键入web界面管理员密码'
+'Please re-enter the web admin password': '请再次键入web界面管理员密码'
+'Web Admin Password': 'web界面管理员密码'
+'Please enter the username for the admin console interface': '请键入Console界面管理员的用户名'
+'Console Admin Username': 'Console界面管理员的用户名'
+'Please enter the console admin password': '请键入Console界面管理员的密码'
+'Please re-enter the console admin password': '请再次键入Console界面管理员的密码'
+'Console Admin Password': 'Console界面管理员密码'
+'Do you want to install hypervisor tools for your hypervisor?': '你想为你的虚拟机安装虚拟化增强工具集嘛?'
+'Configure Hypervisor Tools': '配置虚拟化增强工具集'
+'Is the host set to UTC time?': '是否使用UTC时间模式?'
+'Configure UTC Time': '配置UTC时间模式'
+'Timezone': '时区'
+'Timezone Selection': '时区选择'
+'Please enter the IP or hostname of the local mail server': '请键入本区域邮件服务器的IP或者主机名'
+'Local Mail Server': '本区域邮件服务器'
+'Please enter your IANA country code': '请输入两个字母表示的IANA国家代码,如CN'
+'Please enter your organization name (No spaces, dots, or underscores)': '请键入组织名称(不要含空格,点或者下划线)'
+'Organization Name': '组织名称'
+'Enable Recursion': '启用递归模式'
+'DNS Primary Address': '首要DNS服务器地址'
+'Set DNS': '设置DNS'
+'DNS Secondary Address': '次要DNS服务器地址'
+'Configure IPv4': '配置IPv4'
+'Set IP Address': '设置IP地址'
+'Set IP Netmask': '设置IP掩码'
+'Set IP Gateway': '设置IP网关'
+'Host is UTC': '主机使用UTC时间模式'
+'Set IP Mask': '设置IP掩码'
+'IANA Country Code': 'IANA国家代码'
+'Verify Settings': '确认设置'
+'Enable IPv6 DNS': '启用IPv6 DNS'
+'Do you want to Enable IPv6 DNS?': '你想启用IPv6 DNS?'
